--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div id="quiz" class="hidden"></div>
 
         <div class="nav-btns hidden">
-            <button id="backBtn" class="hidden" onclick="goBack()">Back</button>
+            <button id="backBtn" class="hidden" onclick="goBack()">Home</button>
             <button id="prevBtn" class="hidden" onclick="changePage(-1)">Previous</button>
             <button id="nextBtn" class="hidden" onclick="changePage(1)">Next</button>
         </div>
